# salazar-trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  remove.sh  start.sh  stop.sh
app/: main.py
app/api/: app.py  bot_manager.py  schemas.py
app/api/routes/: backtests.py  bot.py  exchanges.py  llm.py  portfolio.py  risk.py  stock_decisions.py
app/api/websocket/: portfolio_ws.py  status.py
app/backtesting/: engine.py
app/brokers/alpaca/: market_data.py
app/config/: settings.py
app/data/: features.py  models.py  orderbook.py
app/decision/: ensemble.py
app/exchanges/kalshi/: auth.py  execution.py  market_data.py  normalizer.py  websocket.py
app/execution/: engine.py
app/llm/: __init__.py  cache.py  provider.py  schema.py  service.py
app/news/: ingestion.py
app/nlp/: market_analyzer.py  pipeline.py
app/nlp/providers/: finnhub.py  google_news.py  newsapi.py
app/portfolio/: tracker.py
app/regime/: __init__.py  detector.py
app/replay/: player.py
app/stocks/: execution.py  features.py  models.py  risk.py
app/stocks/backtesting/: __init__.py  engine.py  walk_forward.py
app/stocks/decision/: __init__.py  engine.py
app/stocks/ml/: __init__.py  predictor.py
app/stocks/strategies/: __init__.py  breakout.py  momentum.py  pullback.py
app/storage/: repository.py
app/strategies/: base.py  event_probability_model.py  momentum_scalper.py  passive_market_maker.py  prediction_value.py
app/universe/: __init__.py  categories.py  filters.py  manager.py  scanner.py  scorer.py  watchlist.py
docker/: entrypoint.sh
docs/: API_REFERENCE.md  BACKTESTING.md  EXCHANGES.md  JETSON_DEPLOYMENT.md  LOCAL_LLM.md  RISK_CONTROLS.md  STOCK_TRADING.md
frontend/: tsconfig.tsbuildinfo
frontend/src/: index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConnectionDot.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/components/ui/: Collapsible.tsx  InfoTip.tsx  (+1 more)
frontend/src/hooks/: useBotStatus.ts  usePnLChart.ts  usePortfolio.ts  useWebSocket.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx
scripts/: backtest_stock_strategy.py  bootstrap_project.py  diagnose_kalshi_auth.py  diagnose_markets.py  setup_jetson.sh  test_isoformat_fix.py  train_model.py
tests/: test_api_workflow.py  test_kalshi_adapter.py  test_llm_schema.py  test_llm_service.py  test_regime_detector.py  test_stock_backtest.py  test_stock_decision_engine.py  test_stock_features_extra.py  test_stock_risk.py  test_stock_risk_jetson.py  test_stock_strategies.py  test_universe.py
