[project]
name = "salazar-trader"
version = "3.0.0"
description = "Multi-asset trading platform with web GUI — prediction markets and equities"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Developer" }]

dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "structlog>=24.1",
    "aiosqlite>=0.20",
    "click>=8.1",
    "tenacity>=8.2",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "alpaca-py>=0.33",
    "feedparser>=6.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
live = [
    "py-clob-client>=0.18",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
